apps/base/api/middleware-https.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: __NAME__
spec:
  redirectScheme:
    scheme: https
    permanent: true
