apps/base/api/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: __NAME__-svc
  namespace: __NAME__
  labels:
    app.kubernetes.io/name: __NAME__-svc
    app.kubernetes.io/part-of: __NAME__
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: __NAME__
  ports:
    - port: 8080
      targetPort: 8000
      protocol: TCP
